test/syc/bad/shortvalist.c
/*
 * Both short and __va_list specifier
 */

short __va_list a;
